2011-05-31  Matthew Mundell <matthew.mundell@greenbone.net>

	Deal with GCC 4.6 warnings.  Thanks to Stephan Kleine for original patch.
	Backport from trunk r11034.

	* src/attack.c (attack_network): Remove stray variables.

	* src/nasl_plugins.c (nasl_thread): Check nice return.

	* src/openvassd.c (scanner_thread): Check nice return.

	* src/oval_plugins.c (oval_plugin_add): Set NVT description correctly in
	overlength case.

	* src/preferences.c (preferences_drop_privileges): Remove variable
	previously used for trace message.

	* src/shared_socket.c (openvassd_shared_socket_register): Check
	internal_recv return.

	* src/sighand.c (let_em_die): Remove return variable, as the waitpid may
	fail in legitimate cases.

2011-04-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* tools/openvas-nvt-sync.in: Put the mktemp template last, otherwise
	Ubuntu 9.10 gives an error.
	(do_sync): Correct typo.

2011-04-18  Henri Doreau <henri.doreau@greenbone.net>

	* src/ntp_11.c (ntp_1x_send_dependencies): fixed memory leak reported
	by Valgrind.

2011-04-18  Henri Doreau <henri.doreau@greenbone.net>

	* src/pluginload.c (collect_nvts): fixed memory leak reported by
	Valgrind.

2011-04-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set to version to 3.2.4.

2011-04-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.2.3 release.

	* CHANGES: Updated.

2011-04-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Use feed.openvas.org instead of
	rsync.openvas.org in the feed URL.

2011-04-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Ensure openvas-nvt-sync syncs into the
	NVT directory configured in the scanner by default. Remove obsolete
	comment.

2011-03-31  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Do not use rsync as the default when no