@@ -1,3 +1,13 @@
+2011-06-01  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	Close some leaks.  Based on patch from Michael Wiegand.  Backport from
+	trunk r11050.
+
+	* src/oval_plugins.c (start_element, text, oval_plugin_add): Always free
+	memory that is allocated by glib functions.  Take into account that the
+	nvti_set_* functions duplicate the given memory.
+	(ovaldi_launch): Add leak todos.
+
 2011-05-31  Matthew Mundell <matthew.mundell@greenbone.net>
 
 	Deal with GCC 4.6 warnings.  Thanks to Stephan Kleine for original patch.
